added items command